--- a/PA1_template.html
+++ b/PA1_template.html
@@ -217,9 +217,16 @@ output:
 
 <h2>Loading and preprocessing the data</h2>
 
-<p>Read activity.csv File &amp; display file structure.</p>
+<ul>
+<li>Download data package.<br/></li>
+<li>Unzip package.<br/></li>
+<li>Read activity.csv File &amp; display file structure.<br/></li>
+</ul>
 
-<pre><code class="r">actdata &lt;- read.csv(&quot;activity.csv&quot;)
+<pre><code class="r">url &lt;- &quot;https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2Factivity.zip&quot;
+download(url, dest=&quot;dataset.zip&quot;, mode=&quot;wb&quot;) 
+unzip (&quot;dataset.zip&quot;, exdir = &quot;./&quot;)
+actdata &lt;- read.csv(&quot;activity.csv&quot;)
 str(actdata)
 </code></pre>
 
